--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "SAMEAS",
         "STARTSWITH",
         "cmdb",
-        "datapoints"
+        "datapoints",
+        "groupby"
     ]
 }
