--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "STARTSWITH",
         "cmdb",
         "datapoints",
-        "groupby"
+        "groupby",
+        "plugincheck"
     ]
 }
