--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,13 +7,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [12.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 12.x
@@ -32,3 +29,12 @@ jobs:
         git commit -m "Build by Github Actions"
         git push
         git status
+    - uses: actions/setup-go@master
+      with:
+        go-version: "1.13.3"
+    - run: |
+        git clone https://github.com/grafana/plugin-validator;
+        cd ./plugin-validator/cmd/plugincheck;
+        go install
+        plugincheck -url https://github.com/yesoreyeram/grafana-servicenow-datasource;
+        echo $?;
