--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    paths:
+      - dist/
 
 jobs:
   build:
@@ -15,12 +17,11 @@ jobs:
     - uses: actions/setup-go@master
       with:
         go-version: "1.13.3"
-    - run: |
+    - name: Plugin Lint
+      run: |
         git clone https://github.com/grafana/plugin-validator;
         cd ./plugin-validator/cmd/plugincheck;
         go install
         cd ../../;
-        pwd
-        ls -lh;
         plugincheck -url https://github.com/yesoreyeram/grafana-servicenow-datasource;
         echo $?;
