--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,15 +17,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
-    - run: |
-        echo "ServiceNow Grafana Plugin";
-        yarn install --frozen-lockfile;
-        yarn test;
-        yarn build;
-        echo $(date) > dist/LAST_UPDATED;
-        git config --global user.email "actions@github.com";
-        git config --global user.name "Github Actions";
-        git add --force dist/
-        git commit -m "Build by Github Actions"
-        git push
-        git status
+    # - run: |
+    #     echo "ServiceNow Grafana Plugin";
+    #     yarn install --frozen-lockfile;
+    #     yarn test;
+    #     yarn build;
+    #     echo $(date) > dist/LAST_UPDATED;
+    #     git config --global user.email "actions@github.com";
+    #     git config --global user.name "Github Actions";
+    #     git add --force dist/
+    #     git commit -m "Build by Github Actions"
+    #     git push
+    #     git status
