lint exit command fix

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,4 +24,4 @@ jobs:
         go install
         cd ../../;
         plugincheck -url https://github.com/yesoreyeram/grafana-servicenow-datasource;
-        echo $?;
+        exit $?;
