Remove snyk in yarn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "cmdb",
         "datapoints",
         "groupby",
-        "plugincheck"
+        "plugincheck",
+        "vuepress"
     ]
 }
