--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "test": "grafana-toolkit plugin:test",
     "dev": "grafana-toolkit plugin:dev",
     "watch": "grafana-toolkit plugin:dev --watch",
-    "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect",
     "docs:dev": "vuepress dev",
     "docs:build": "vuepress build"
   },
@@ -33,14 +31,12 @@
     "@grafana/data": "6.6.1",
     "@grafana/runtime": "7.0.4",
     "@grafana/ui": "7.0.4",
-    "lodash": "^4.17.15",
-    "snyk": "^1.373.1"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@grafana/toolkit": "6.5.3",
     "@types/grafana": "github:CorpGlory/types-grafana.git",
     "@types/lodash": "^4.14.149",
     "vuepress": "^1.5.3"
-  },
-  "snyk": true
+  }
 }
